# ae_tutorial

./: .env.sample  .gitignore  .gitmodules  Dockerfile  Dockerfile.Alpine  LICENSE  README.md  compose.yml  hello.py  main.py  pyproject.toml  train.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_update.yml  feature_request.yml  performance_issue.yml  security_vulnerability.yml
.github/workflows/: approve.yml
src/ae_tutorial/: ae.py  ae_ca.py  ae_faa.py  dataset.py
src/ae_tutorial/utils/: __init__.py  entity.py  result.py  set_seed.py
tests/: test_sayhello.py
tests/test_utils/: test_set_seed.py
