[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Ryo Arai", email = "ryo.p4499@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "lightning>=2.5.3",
    "matplotlib>=3.10.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]
torchvision = [{ index = "pytorch-cu129" }]
torchtext = [{ index = "pytorch-cu129" }]
torchaudio = [{ index = "pytorch-cu129" }]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[dependency-groups]
dev = ["mypy>=1.13.0", "mypy-extensions>=1.0.0", "ruff>=0.8.3"]
test = ["pytest-mock>=3.14.0", "pytest>=8.3.4", "pytest-cov>=6.0.0"]

[project.optional-dependencies]
cli = ["click>=8.1.7", "rich>=13.9.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/mypackage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-sv"]
